[package]
name = "great-wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
clap = { version = "4.4.6", features = ["derive", "env", "unicode", "wrap_help"] }
hotwatch = "0.5.0"
watchexec = "2.3.0"

[dev-dependencies]
predicates = "3.0.4"
